crates/oxc_react_compiler/tests/snapshots/typescript-this-param-in-uncompiled-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/typescript-this-param-in-uncompiled-function.ts
---
// @expectNothingCompiled @compilationMode:"infer"
export function Decorate() {
	return function(_target: object, _key: string, descriptor: PropertyDescriptor) {
		const original = descriptor.value;
		descriptor.value = function(this: unknown) {
			return original.apply(this, []);
		};
	};
}
