crates/oxc_react_compiler/tests/snapshots/unary-expr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unary-expr.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees:false
function component(a) {
	const $ = _c(8);
	const t = { t: a };
	const z = +t.t;
	const q = -t.t;
	const p = void t.t;
	const n = delete t.t;
	const m = !t.t;
	const e = ~t.t;
	const f = typeof t.t;
	let t0;
	if ($[0] !== e || $[1] !== f || $[2] !== m || $[3] !== n || $[4] !== p || $[5] !== q || $[6] !== z) {
		t0 = {
			z,
			p,
			q,
			n,
			m,
			e,
			f
		};
		$[0] = e;
		$[1] = f;
		$[2] = m;
		$[3] = n;
		$[4] = p;
		$[5] = q;
		$[6] = z;
		$[7] = t0;
	} else {
		t0 = $[7];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
