crates/oxc_react_compiler/tests/snapshots/unclosed-eslint-suppression-skips-all-components.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unclosed-eslint-suppression-skips-all-components.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Suppression: React Compiler has skipped optimizing this component because one or more React ESLint rules were disabled", labels: [LabeledSpan { label: Some("Found React rule suppression"), span: Span { start: 130, end: 177 }, primary: false }], help: Some("React Compiler only works when your components follow all the rules of React, disabling them may result in unexpected or incorrect behavior. Found suppression `eslint-disable react-hooks/rules-of-hooks`"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Suppression: React Compiler has skipped optimizing this component because one or more React ESLint rules were disabled", labels: [LabeledSpan { label: Some("Found React rule suppression"), span: Span { start: 130, end: 177 }, primary: false }], help: Some("React Compiler only works when your components follow all the rules of React, disabling them may result in unexpected or incorrect behavior. Found suppression `eslint-disable react-hooks/rules-of-hooks`"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @panicThreshold:"none" @validateExhaustiveMemoizationDependencies:false
// unclosed disable rule should affect all components
/* eslint-disable react-hooks/rules-of-hooks */
function ValidComponent1(props) {
	return <div>Hello World!</div>;
}
function ValidComponent2(props) {
	return <div>{props.greeting}</div>;
}
