crates/oxc_react_compiler/tests/snapshots/unconditional-break-label.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unconditional-break-label.js
---
function foo(a) {
	return a + 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
