crates/oxc_react_compiler/tests/snapshots/unmemoized-nonreactive-dependency-is-pruned-as-dependency.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unmemoized-nonreactive-dependency-is-pruned-as-dependency.js
---
import { mutate, useNoAlias } from "shared-runtime";
function Component(props) {
	const x = [];
	useNoAlias();
	mutate(x);
	return <div>{x}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
