crates/oxc_react_compiler/tests/snapshots/unused-array-middle-element.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unused-array-middle-element.js
---
function foo(props) {
	const [x, , y] = props.a;
	return x + y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
